New feature: added login route

--- a/views/index2.ejs
+++ b/views/index2.ejs
@@ -103,7 +103,7 @@
   </style>
 </head>
 <body>
-
+<%- include("partials/flash") %>
   <header>
     <h1>Malaika & Maaz</h1>
     <p>December 15, 2025 — Our Forever Begins</p>
