--- a/views/feed.ejs
+++ b/views/feed.ejs
@@ -4,35 +4,58 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Pinterest Brick Layout</title>
-  <link rel="stylesheet" href="/stylesheets/feedPage.css">
+  <link rel="stylesheet" href="./stylesheets/feedPage.css">
 </head>
 <body>
+
+  <%- include("partials/flash") %>
 
   <%- include("partials/header") %>
 
   <!-- ===== IMAGES MASONRY GRID ===== -->
   <div class="masonry">
-
-<div class="masonry-item">
-  <div class="masonry-item">
-  <img src="https://iili.io/FBPwmYu.jpg" alt="Sidhu Moose Wala 5">
-</div>
-  <img src="https://iili.io/FBPdVQj.jpg" alt="Sidhu Moose Wala 2">
-</div>
-<div class="masonry-item">
-  <img src="https://iili.io/FBPQDkx.jpg" alt="Sidhu Moose Wala 7">
-</div>
-    <div class="masonry-item"><img src="https://picsum.photos/id/101/300/380" alt=""></div>
-    
-    <div class="masonry-item"><img src="https://picsum.photos/id/102/300/500" alt=""></div>
-    <div class="masonry-item"><img src="https://picsum.photos/id/103/300/350" alt=""></div>
-
-    <div class="masonry-item"><img src="https://picsum.photos/id/105/300/300" alt=""></div>
-    <div class="masonry-item"><img src="https://picsum.photos/id/106/300/390" alt=""></div>
-    <div class="masonry-item"><img src="https://picsum.photos/id/107/300/410" alt=""></div>
-    <div class="masonry-item"><img src="https://picsum.photos/id/108/300/460" alt=""></div>
-    <div class="masonry-item"><img src="https://picsum.photos/id/109/300/370" alt=""></div>
+<% if(users.length > 0) { %>
+  <% users.forEach((user) => { %>
+    <% if(user.post && user.post.length > 0) { %>
+      <% user.post.forEach((eachPost) => { %>
+    <div class="masonry-item upgraded-card">
+  <!-- Top Left Round Profile -->
+  <div class="user-avatar">
+    <img src="/images/uploads/<%= user.profileImage %> " alt="User Avatar" />
+    <a href="/otherusersprofile/<%= user._id %>"><%= user.username %></a>
   </div>
+
+  <!-- Main Image -->
+  <img src="/images/uploads/<%= eachPost.image %>" alt="<%= eachPost.postdata %>" class="main-image" />
+
+  <!-- Post Text -->
+  <p class="post-text"><%= eachPost.postdata %></p>
+
+  <!-- Action Buttons -->
+  <div class="post-actions">
+    
+        <form action="/posts/likepost/<%= eachPost._id %>" method="post" style="display:inline;">
+      <button class="like-btn"> 
+      <%= eachPost.likes.includes(user._id)? "Liked":"Likes" %> <%= eachPost.likes.length %></button>
+    </form>
+    
+    <form action="/pins/savepin" method="post" style="display:inline;">
+      <input hidden type="text" name="image" value="<%= eachPost.image %>"  required/>
+     <input hidden type="text" name="text" value="<%= eachPost.postdata %>"     required/>
+      <button class="save-btn">📌 Save</button>
+    </form>
+  </div>
+</div>
+      <% }) %>
+    <% } else { %>
+    <% } %>
+  <% }) %>
+<% } else { %>
+  <h1>No users found in feed</h1>
+<% } %>
+
+
+</div>
 
 </body>
 </html>
